--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="/bold.ne/logo.png" alt="Estética Animal Ypiranga" class="logo-img">
+                    <img src="/logo.png" alt="Estética Animal Ypiranga" class="logo-img">
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home" class="nav-link">Início</a></li>
@@ -92,7 +92,7 @@
                 <!-- Banho Premium -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/bold.ne/hydra_kit.jpg" alt="Banho Premium">
+                        <img src="/hydra_kit.jpg" alt="Banho Premium">
                     </div>
                     <h3>Banho Premium</h3>
                     <p>Banho completo com produtos de alta qualidade e secagem profissional</p>
@@ -107,7 +107,7 @@
                 <!-- Banho Golden -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/bold.ne/pet_show.jpg" alt="Banho Golden">
+                        <img src="/pet_show.jpg" alt="Banho Golden">
                     </div>
                     <h3>Banho Golden</h3>
                     <p>Banho especial com tratamento diferenciado para seu pet</p>
@@ -476,7 +476,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
-                        <img src="/bold.ne/logo.png" alt="Estética Animal Ypiranga" class="logo-img">
+                        <img src="/logo.png" alt="Estética Animal Ypiranga" class="logo-img">
                         <span class="logo-text">Estética Animal Ypiranga</span>
                     </div>
                     <p>Cuidando do seu pet com amor e profissionalismo</p>
@@ -611,4 +611,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
