--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
             <h2 class="section-title">Galeria</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.pexels.com/photos/4587955/pexels-photo-4587955.jpeg" alt="Pet após tosa">
+                    <img src="https://i.ibb.co/0yWvNkf4/Whats-App-Image-2025-08-15-at-09-46-54.jpg" alt="Pet após tosa">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Banho em pet">
+                    <img src="https://i.ibb.co/ycHdp5bG/Whats-App-Image-2025-08-15-at-09-46-34.jpg" alt="Banho em pet">
                 </div>
                 <div class="gallery-item">
                     <img src="https://images.pexels.com/photos/4588047/pexels-photo-4588047.jpeg" alt="Cuidados com pet">
@@ -613,3 +613,4 @@
 </body>
 
 </html>
+
